--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
+    <link rel="stylesheet" href="./Styles/style.css">
 </head>
 <body>
-    <h1>Hi</h1>
+    <header>
+<nav>
+    <h3 class="navTitle">G3 Architects</h3>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Login</a></li>
+    </ul>
+</nav>
+<section class="banner">
+ <div class="banner-content">
+    <h1 class="banner-title">Brand New Group of Architects</h1>
+    <p class="banner-description">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+    </p>
+    <button class="primary-button">
+        Explore More
+    </button>
+ </div>
+</section>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
