--- a/index.html
+++ b/index.html
@@ -31,7 +31,22 @@
 </section>
     </header>
     <main>
-
+<!-- team section -->
+<section class="teams-container">
+    <div class="teams-img-container">
+<img src="./Images/team1.png" alt="">
+<img src="./Images/team2.png" alt="">
+<img src="./Images/team3.png" alt="">
+<img src="./Images/team4.png" alt="">
+    </div>
+    <div class="teams-content">
+<h3 class="teams-title"> <span id="span-1"><i>Quick list</i></span> of Our <span id="span-2"> Features</span></h3>
+<p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
+<button class="primary-button">
+    Explore More
+</button>
+    </div>
+</section>
     </main>
     <footer>
 
