responsive facts secton

--- a/index.html
+++ b/index.html
@@ -47,6 +47,60 @@
 </button>
     </div>
 </section>
+<!-- features section -->
+<!-- <section class="features-container">
+    <div class="features-content">
+<h3 class="teams-title features-title">Features you will love & enjoy</h3>
+<p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<div class="all-features">
+    <div class="all-features">
+        <h5>Dexktop & Mobile Version</h5>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="all-features">
+        <h5>Drag & Drop Builder</h5>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="all-features">
+        <h5>Awesome Modern Design</h5>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+    <div class="all-features">
+        <h5>Super Easy to Edit</h5>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+    </div>
+</div>
+    </div>
+    <div class="features-image-container">
+<img src="./Images/architect.png" alt="">
+    </div>
+</section> -->
+<section class="features">
+    <h3 class="teams-title">Some Facts</h3>
+    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+    <div class="facts-cart">
+        <div class="cart">
+            <img src="./Images/icons/ribon.png" alt="">
+            <h3 class="cart-stats">54</h3>
+            <h6 class="cart-title">Awards Winnings</h6>
+        </div>
+        <div class="cart">
+            <img src="./Images/icons/projects.png" alt="">
+            <h3 class="cart-stats">1458</h3>
+            <h6 class="cart-title">Project Finished</h6>
+        </div>
+        <div class="cart">
+            <img src="./Images/icons/customers.png" alt="">
+            <h3 class="cart-stats">590</h3>
+            <h6 class="cart-title">Clients Works</h6>
+        </div>
+        <div class="cart">
+            <img src="./Images/icons/email.png" alt="">
+            <h3 class="cart-stats">2296</h3>
+            <h6 class="cart-title">Email Sends</h6>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
