--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     </div>
 </section>
 <!-- features section -->
-<!-- <section class="features-container">
+<section class="features-container">
     <div class="features-content">
 <h3 class="teams-title features-title">Features you will love & enjoy</h3>
 <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-<div class="all-features">
+<div class="all-features-cart">
     <div class="all-features">
-        <h5>Dexktop & Mobile Version</h5>
+        <h5 >Dexktop & Mobile Version</h5>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
     </div>
     <div class="all-features">
@@ -71,10 +71,14 @@
     </div>
 </div>
     </div>
-    <div class="features-image-container">
+    <div class="features-image">
 <img src="./Images/architect.png" alt="">
+<div class="experience">
+   <h2>10+ Years</h2>
+   <p>Experiences</p>
+</div>
     </div>
-</section> -->
+</section>
 <section class="features">
     <h3 class="teams-title">Some Facts</h3>
     <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
@@ -101,9 +105,23 @@
         </div>
     </div>
 </section>
+<section class="sponsors-container">
+    <div class="sponsors-content">
+<h3 class="teams-title">Our Sponsors</h3>
+<p class="banner-description">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+    </div>
+    <div class="sponsors">
+<img src="./Images/sponsors/spotify.png" alt="">
+<img src="./Images/sponsors/amazon.png" alt="">
+<img src="./Images/sponsors/google.png" alt="">
+<img src="./Images/sponsors/telerama.png" alt="">
+<img src="./Images/sponsors/figma.png" alt="">
+
+    </div>
+</section>
     </main>
     <footer>
-
+<p class="banner-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
